# dna_storage

./: .gitignore  README.md  pyproject.toml
src/: evaluation.py
src/largestinteriorrectangle/: lir_basis.py  lir_within_contour.py
src/team0001/: coder.py  run.py
