[project]
name = "team0001"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.com" }
]
dependencies = [
    "biopython>=1.78",
    "Chamaeleo==1.34",
    "numpy>=1.21.2",
    "opencv-python>=4.1.1.26",
    "Pillow>=8.2.0",
    "scikit-image>=0.19.3",
    "scipy>=1.7.3",
    "tensorflow==2.5.0; platform_system != 'Darwin' or platform_machine != 'arm64'",
    "torch==1.12.0",
]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
